--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,13 @@ firebase_options.dart
 google-services.json
 
 keys
+config.js
+
+# Dependency directories
+node_server/node_modules
+
+# Optional npm cache directory
+.npm
+
+# dotenv environment variables file
+.env
