--- a/node_server/package.json
+++ b/node_server/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1",
+    "node": "^17.7.2",
+    "ws": "^8.8.0"
+  }
 }
