--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3
+  web_socket_channel: ^2.1.0
   
 
   # The following adds the Cupertino Icons font to your application.
