--- a/node_server/package.json
+++ b/node_server/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "node": "^17.7.2",
+    "querystring": "^0.2.1",
+    "request": "^2.88.2",
     "ws": "^8.8.0"
   }
 }
