--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
+  spotify: ^0.7.2
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
