Working Spotify auth button, Added swipeable navigator

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^3.3.19
   spotify: ^0.7.2
   webview_flutter: ^3.0.4
+  swipeable_page_route: ^0.2.6
 
 dev_dependencies:
   flutter_test:
