--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
+  flutter: ">=1.22.2"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,8 +39,8 @@ dependencies:
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   spotify: ^0.7.2
-  webview_flutter: ^3.0.4
   swipeable_page_route: ^0.2.6
+  flutter_inappwebview: ^5.4.3+7
 
 dev_dependencies:
   flutter_test:
