--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   spotify: ^0.7.2
   swipeable_page_route: ^0.2.6
   flutter_inappwebview: ^5.4.3+7
+  url_launcher: ^6.1.3
 
 dev_dependencies:
   flutter_test:
