--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   swipeable_page_route: ^0.2.6
   flutter_inappwebview: ^5.4.3+7
   url_launcher: ^6.1.3
+  provider: ^4.1.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
