--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.1.3
   provider: ^4.1.2
   shared_preferences: ^2.0.15
+  cloud_firestore: ^3.1.18
 
 dev_dependencies:
   flutter_test:
