fixed Spotify login by removing onLoadStart clause; setup saved credentials flow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^4.1.2
   shared_preferences: ^2.0.15
   cloud_firestore: ^3.1.18
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
