--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.0.15
   cloud_firestore: ^3.1.18
   flutter_secure_storage: ^5.0.2
+  settings_ui: ^2.0.2
 
 dev_dependencies:
   flutter_test:
