--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.17.1
-  firebase_auth: ^3.3.19
+  
   spotify: ^0.7.2
   swipeable_page_route: ^0.2.6
   flutter_inappwebview: ^5.4.3+7
   url_launcher: ^6.1.3
   provider: ^4.1.2
   shared_preferences: ^2.0.15
-  cloud_firestore: ^3.1.18
   flutter_secure_storage: ^5.0.2
   settings_ui: ^2.0.2
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  cloud_firestore: ^3.1.18
+  firebase_storage: ^10.3.1
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
