--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   swipeable_page_route: ^0.2.6
   flutter_inappwebview: ^5.4.3+7
   url_launcher: ^6.1.3
-  provider: ^4.1.2
+  provider: ^5.0.0
   shared_preferences: ^2.0.15
   flutter_secure_storage: ^5.0.2
   settings_ui: ^2.0.2
@@ -50,6 +50,7 @@ dependencies:
   cloud_firestore: ^3.1.18
   firebase_storage: ^10.3.1
   image_picker: ^0.8.5+3
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
