--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_storage: ^10.3.1
   image_picker: ^0.8.5+3
   uuid: ^3.0.6
+  just_audio: ^0.9.27
 
 dev_dependencies:
   flutter_test:
