--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   image_picker: ^0.8.5+3
   uuid: ^3.0.6
   just_audio: ^0.9.27
+  quiver: ^3.1.0
 
 dev_dependencies:
   flutter_test:
