--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
   uses-material-design: true
   assets:
       - assets/icons/
+      - assets/testImage.jpeg
   fonts:
     - family: ProximaSans
       fonts:
