--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   uuid: ^3.0.6
   just_audio: ^0.9.27
   quiver: ^3.1.0
+  audio_video_progress_bar: ^0.10.0
 
 dev_dependencies:
   flutter_test:
