--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   just_audio: ^0.9.27
   quiver: ^3.1.0
   audio_video_progress_bar: ^0.10.0
+  rxdart: ^0.27.5
 
 dev_dependencies:
   flutter_test:
