Add default profile picture/fix photo selection in ios, disallow user from adding friends they already have

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Tunestreak requires access to the photo library so that the user can set their profile picture.</string>
 </dict>
 </plist>
