--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_auth: ^3.3.19
   cloud_firestore: ^3.1.18
   firebase_storage: ^10.3.1
+  firebase_messaging: ^11.1.0
   image_picker: ^0.8.5+3
   uuid: ^3.0.6
   just_audio: ^0.9.27
