--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -32,3 +32,6 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode2v3
 !default.pbxuser
 !default.perspectivev3
+
+AppIcon-1.appiconset/
+AppIcon.appiconset/
